--- a/styles/signup.css
+++ b/styles/signup.css
@@ -7,6 +7,16 @@
     padding-bottom: 10px;
 }
 
-input {
+.row > input {
     float: right;
+}
+
+.button-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.button-wrapper > button {
+    margin-left: 10px;
+    margin-right: 10px;
 }
